# auth0-okta-poc

auth0-poc/: pyproject.toml  settings.py  wsgi.py
auth0-poc/auth0_poc/: app.py  auth.py  errors.py  views.py
auth0-poc/spa-tester/: auth.js  index.html  style.css
okta-poc/: pyproject.toml  settings.py  wsgi.py
okta-poc/okta_poc/: app.py  auth.py  views.py
okta-poc/spa-tester/: auth.js  index.html
